[package]
name = "monkeytype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", default-features = false, features = [
  "windows",
] }
console = "0.15.8"
strcursor = "0.2.5"
