[package]
name = "monkeytype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strcursor = "0.2.5"
fastrand = "2.0.1"
ratatui = "0.26.1"
color-eyre = "0.6.2"
crossterm = "0.27.0"
compact_str = "0.7.1"
